cleanup and commentary

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -31,6 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "seed_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "catalog = Catalog()\n",
     "catalog.list_groups()"
    ]
@@ -69,7 +78,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bs = catalog.table(\"buy_sell\", BRONZE)\n",
+    "bs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bs = catalog.table(\"buy_sell\", SILVER)\n",
+    "bs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ibis.random().name(\"random\").as_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bs.mutate(random=ibis.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bs = catalog.table(\"buy_sell\", GOLD)\n",
     "bs"
    ]
   },
