edits and presentation

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -11,19 +11,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import ibis\n",
     "import ibis.selectors as s\n",
     "\n",
     "from icarus_investments.source import fake, seed_table\n",
-    "from icarus_investments.dag.config import DATA_DIR, RAW_DATA_DIR, BRONZE, SILVER, GOLD\n",
+    "from icarus_investments.dag.config import (\n",
+    "    DATA_DIR,\n",
+    "    RAW_DATA_DIR,\n",
+    "    RAW_BUY_SELL_TABLE,\n",
+    "    RAW_SOCIAL_MEDIA_TABLE,\n",
+    "    BRONZE,\n",
+    "    SILVER,\n",
+    "    GOLD,\n",
+    ")\n",
     "from icarus_investments.catalog import Catalog\n",
     "\n",
     "ibis.options.interactive = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> a     </span>┃<span style=\"font-weight: bold\"> b      </span>┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">int64</span> │ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">string</span> │\n",
+       "├───────┼────────┤\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">a     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">a     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">b     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "└───────┴────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1ma\u001b[0m\u001b[1m    \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mb\u001b[0m\u001b[1m     \u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ \u001b[2mint64\u001b[0m │ \u001b[2mstring\u001b[0m │\n",
+       "├───────┼────────┤\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32ma     \u001b[0m │\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32ma     \u001b[0m │\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32mb     \u001b[0m │\n",
+       "│     \u001b[1;36m2\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "│     \u001b[1;36m2\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "│     \u001b[1;36m3\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "└───────┴────────┘"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"a\": [1, 1, 1, 2, 2, 3],\n",
+    "    \"b\": [\"a\", \"a\", \"b\", \"c\", \"c\", \"c\"],\n",
+    "}\n",
+    "t = ibis.memtable(data)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> a     </span>┃<span style=\"font-weight: bold\"> b      </span>┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">int64</span> │ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">string</span> │\n",
+       "├───────┼────────┤\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">b     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">a     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "└───────┴────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1ma\u001b[0m\u001b[1m    \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mb\u001b[0m\u001b[1m     \u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ \u001b[2mint64\u001b[0m │ \u001b[2mstring\u001b[0m │\n",
+       "├───────┼────────┤\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32mb     \u001b[0m │\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32ma     \u001b[0m │\n",
+       "│     \u001b[1;36m2\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "└───────┴────────┘"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.distinct(on=~s.c(\"a\"), keep=\"first\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> a     </span>┃<span style=\"font-weight: bold\"> b      </span>┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">int64</span> │ <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">string</span> │\n",
+       "├───────┼────────┤\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">a     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">c     </span> │\n",
+       "│     <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> │ <span style=\"color: #008000; text-decoration-color: #008000\">b     </span> │\n",
+       "└───────┴────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━┳━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1ma\u001b[0m\u001b[1m    \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mb\u001b[0m\u001b[1m     \u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━╇━━━━━━━━┩\n",
+       "│ \u001b[2mint64\u001b[0m │ \u001b[2mstring\u001b[0m │\n",
+       "├───────┼────────┤\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32ma     \u001b[0m │\n",
+       "│     \u001b[1;36m2\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "│     \u001b[1;36m3\u001b[0m │ \u001b[32mc     \u001b[0m │\n",
+       "│     \u001b[1;36m1\u001b[0m │ \u001b[32mb     \u001b[0m │\n",
+       "└───────┴────────┘"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.distinct(keep=\"first\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -68,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs = ibis.read_parquet(f\"{DATA_DIR}/{RAW_DATA_DIR}/buy_sell/*.parquet\")\n",
+    "data_glob = os.path.join(DATA_DIR, RAW_DATA_DIR, RAW_BUY_SELL_TABLE, \"*.parquet\")\n",
+    "bs = ibis.read_parquet(data_glob)\n",
     "bs"
    ]
   },
@@ -78,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs = catalog.table(\"buy_sell\", BRONZE)\n",
+    "bs = catalog.table(\"bronze_buy_sell\")\n",
     "bs"
    ]
   },
@@ -88,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs = catalog.table(\"buy_sell\", SILVER)\n",
+    "bs = catalog.table(\"silver_buy_sell\")\n",
     "bs"
    ]
   },
@@ -98,25 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ibis.random().name(\"random\").as_table()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bs.mutate(random=ibis.random())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bs = catalog.table(\"buy_sell\", GOLD)\n",
+    "bs = catalog.table(\"gold_buy_sell\")\n",
     "bs"
    ]
   },
@@ -153,7 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm = ibis.read_parquet(f\"{DATA_DIR}/{RAW_DATA_DIR}/social_media/*.parquet\")\n",
+    "data_glob = os.path.join(DATA_DIR, RAW_DATA_DIR, RAW_SOCIAL_MEDIA_TABLE, \"*.parquet\")\n",
+    "sm = ibis.read_parquet(data_glob)\n",
     "sm"
    ]
   },
@@ -163,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm = catalog.table(\"social_media\", SILVER)\n",
+    "sm = catalog.table(\"silver_social_media\")\n",
     "sm"
    ]
   },
