--- a/eda.ipynb
+++ b/eda.ipynb
@@ -29,7 +29,7 @@
     "    SILVER,\n",
     "    GOLD,\n",
     ")\n",
-    "from icarus_investments.catalog import Catalog\n",
+    "from icarus_investments.dag.resources import Catalog\n",
     "\n",
     "ibis.options.interactive = True"
    ]
