--- a/eda.ipynb
+++ b/eda.ipynb
@@ -19,8 +19,8 @@
     "import ibis\n",
     "import ibis.selectors as s\n",
     "\n",
-    "from icarus_investments.source import fake, seed_table\n",
-    "from icarus_investments.dag.config import (\n",
+    "from icarus.synthetic_data import fake, seed_table\n",
+    "from icarus.investments.dag.config import (\n",
     "    DATA_DIR,\n",
     "    RAW_DATA_DIR,\n",
     "    RAW_BUY_SELL_TABLE,\n",
@@ -29,7 +29,7 @@
     "    SILVER,\n",
     "    GOLD,\n",
     ")\n",
-    "from icarus_investments.dag.resources import Catalog\n",
+    "from icarus.investments.dag.resources import Catalog\n",
     "\n",
     "ibis.options.interactive = True"
    ]
