--- a/website/slides/synthetic-data/index.qmd
+++ b/website/slides/synthetic-data/index.qmd
@@ -66,7 +66,7 @@ Note this could come from any Ibis backend. Of course, to use your own data swap
 Use table-valued UDFs to generate synthetic data.
 
 ```{.python}
-from icarus.investments.dag.config import (
+from icarus.config import (
     DATA_DIR,
     BRONZE,
     SILVER,
